--- a/sentiment-rnn/Sentiment_RNN_Solution.ipynb
+++ b/sentiment-rnn/Sentiment_RNN_Solution.ipynb
@@ -39,9 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -96,9 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from string import punctuation\n",
@@ -179,9 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# feel free to use this import \n",
@@ -220,7 +214,7 @@
       "Unique words:  74072\n",
       "\n",
       "Tokenized review: \n",
-      " [[21025, 308, 6, 3, 1050, 207, 8, 2138, 32, 1, 171, 57, 15, 49, 81, 5785, 44, 382, 110, 140, 15, 5194, 60, 154, 9, 1, 4975, 5852, 475, 71, 5, 260, 12, 21025, 308, 13, 1978, 6, 74, 2395, 5, 613, 73, 6, 5194, 1, 24103, 5, 1983, 10166, 1, 5786, 1499, 36, 51, 66, 204, 145, 67, 1199, 5194, 19869, 1, 37442, 4, 1, 221, 883, 31, 2988, 71, 4, 1, 5787, 10, 686, 2, 67, 1499, 54, 10, 216, 1, 383, 9, 62, 3, 1406, 3686, 783, 5, 3483, 180, 1, 382, 10, 1212, 13583, 32, 308, 3, 349, 341, 2913, 10, 143, 127, 5, 7690, 30, 4, 129, 5194, 1406, 2326, 5, 21025, 308, 10, 528, 12, 109, 1448, 4, 60, 543, 102, 12, 21025, 308, 6, 227, 4146, 48, 3, 2211, 12, 8, 215, 23]]\n"
+      " [[21996, 308, 6, 3, 1051, 207, 8, 2141, 32, 1, 171, 57, 15, 49, 81, 5832, 44, 382, 110, 140, 15, 5240, 60, 154, 9, 1, 4995, 5884, 475, 71, 5, 260, 12, 21996, 308, 13, 1982, 6, 74, 2395, 5, 613, 73, 6, 5240, 1, 25249, 5, 1991, 10223, 1, 5793, 1503, 36, 51, 66, 204, 145, 67, 1200, 5240, 20319, 1, 38533, 4, 1, 221, 883, 31, 2998, 71, 4, 1, 5843, 10, 687, 2, 67, 1503, 54, 10, 216, 1, 384, 9, 62, 3, 1406, 3697, 783, 5, 3500, 180, 1, 382, 10, 1212, 14001, 32, 308, 3, 349, 341, 2914, 10, 143, 127, 5, 7752, 30, 4, 129, 5240, 1406, 2327, 5, 21996, 308, 10, 528, 12, 109, 1449, 4, 60, 543, 102, 12, 21996, 308, 6, 227, 4146, 48, 3, 2215, 12, 8, 215, 23]]\n"
      ]
     }
    ],
@@ -247,9 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 1=positive, 0=negative label conversion\n",
@@ -331,6 +323,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "zipped = list(zip(reviews_ints, encoded_labels))\n",
+    "random.shuffle(zipped)\n",
+    "review_ints, encoded_labels = zip(*zipped)\n",
+    "encoded_labels = np.array(encoded_labels)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -362,10 +367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def pad_features(reviews_ints, seq_length):\n",
@@ -385,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -394,8 +397,8 @@
      "text": [
       "[[    0     0     0     0     0     0     0     0     0     0]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
-      " [22382    42 46418    15   706 17139  3389    47    77    35]\n",
-      " [ 4505   505    15     3  3342   162  8312  1652     6  4819]\n",
+      " [22437    42 51189    15   707 17544  3400    47    77    35]\n",
+      " [ 4524   505    15     3  3354   162  8397  1653     6  4823]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
@@ -405,20 +408,20 @@
       " [    0     0     0     0     0     0     0     0     0     0]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
-      " [    1   330   578    34     3   162   748  2731     9   325]\n",
-      " [    9    11 10171  5305  1946   689   444    22   280   673]\n",
+      " [    1   330   578    34     3   162   750  2741     9   325]\n",
+      " [    9    11 10350  5339  1951   690   444    22   280   673]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
-      " [    1   307 10399  2069  1565  6202  6528  3288 17946 10628]\n",
+      " [    1   307 10600  2074  1565  6259  6563  3300 17947 10782]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
-      " [   21   122  2069  1565   515  8181    88     6  1325  1182]\n",
-      " [    1    20     6    76    40     6    58    81    95     5]\n",
-      " [   54    10    84   329 26230 46427    63    10    14   614]\n",
-      " [   11    20     6    30  1436 32317  3769   690 15100     6]\n",
+      " [   21   122  2074  1565   515  8261    88     6  1327  1182]\n",
+      " [    1    20     6    76    40     6    58    81    94     5]\n",
+      " [   54    10    84   329 27001 65129    63    10    14   614]\n",
+      " [   11    20     6    30  1437 35146  3789   688 15438     6]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
-      " [   40    26   109 17952  1422     9     1   327     4   125]\n",
+      " [   40    26   109 18029  1424     9     1   327     4   125]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
-      " [   10   499     1   307 10399    55    74     8    13    30]\n",
+      " [   10   499     1   307 10600    55    74     8    13    30]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
       " [    0     0     0     0     0     0     0     0     0     0]\n",
       " [    0     0     0     0     0     0     0     0     0     0]]\n"
@@ -456,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -526,10 +529,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -550,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -559,20 +560,19 @@
      "text": [
       "Sample input size:  torch.Size([50, 200])\n",
       "Sample input: \n",
-      " tensor([[     0,      0,      0,  ...,      8,    215,     23],\n",
-      "        [     0,      0,      0,  ...,     29,    108,   3324],\n",
-      "        [ 22382,     42,  46418,  ...,    483,     17,      3],\n",
+      " tensor([[    0,     0,     0,  ...,     8,   215,    23],\n",
+      "        [    0,     0,     0,  ...,    29,   108,  3338],\n",
+      "        [22437,    42, 51189,  ...,   483,    17,     3],\n",
       "        ...,\n",
-      "        [     0,      0,      0,  ...,     21,    397,    243],\n",
-      "        [     0,      0,      0,  ...,      7,   1969,   5153],\n",
-      "        [     0,      0,      0,  ...,   1511,     71,    350]])\n",
+      "        [    0,     0,     0,  ...,    21,   396,   243],\n",
+      "        [    0,     0,     0,  ...,     7,  1973,  5159],\n",
+      "        [    0,     0,     0,  ...,  1511,    71,   350]])\n",
       "\n",
       "Sample label size:  torch.Size([50])\n",
       "Sample label: \n",
-      " tensor([ 1,  0,  1,  0,  1,  0,  1,  0,  1,  0,  1,  0,  1,  0,\n",
-      "         1,  0,  1,  0,  1,  0,  1,  0,  1,  0,  1,  0,  1,  0,\n",
-      "         1,  0,  1,  0,  1,  0,  1,  0,  1,  0,  1,  0,  1,  0,\n",
-      "         1,  0,  1,  0,  1,  0,  1,  0])\n"
+      " tensor([1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0,\n",
+      "        1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0,\n",
+      "        1, 0])\n"
      ]
     }
    ],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -646,10 +646,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
@@ -738,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -785,10 +783,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# loss and optimization functions\n",
@@ -800,21 +796,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1/2... Step: 100... Loss: 0.6922... Val Loss: 0.6934\n",
-      "Epoch: 1/2... Step: 200... Loss: 0.6776... Val Loss: 0.6943\n",
-      "Epoch: 1/2... Step: 300... Loss: 0.6989... Val Loss: 0.6943\n",
-      "Epoch: 1/2... Step: 400... Loss: 0.6906... Val Loss: 0.6927\n",
-      "Epoch: 2/2... Step: 500... Loss: 0.6763... Val Loss: 0.6949\n",
-      "Epoch: 2/2... Step: 600... Loss: 0.3147... Val Loss: 0.3147\n",
-      "Epoch: 2/2... Step: 700... Loss: 0.3138... Val Loss: 0.3138\n",
-      "Epoch: 2/2... Step: 800... Loss: 0.3135... Val Loss: 0.3136\n"
+      "Epoch: 1/2... Step: 100... Loss: 0.6864... Val Loss: 0.6925\n",
+      "Epoch: 1/2... Step: 200... Loss: 0.6481... Val Loss: 0.5041\n",
+      "Epoch: 1/2... Step: 300... Loss: 0.6948... Val Loss: 0.3138\n",
+      "Epoch: 1/2... Step: 400... Loss: 0.3134... Val Loss: 0.3135\n",
+      "Epoch: 2/2... Step: 500... Loss: 0.3142... Val Loss: 0.3134\n",
+      "Epoch: 2/2... Step: 600... Loss: 0.3137... Val Loss: 0.3133\n",
+      "Epoch: 2/2... Step: 700... Loss: 0.3168... Val Loss: 0.3133\n",
+      "Epoch: 2/2... Step: 800... Loss: 0.3133... Val Loss: 0.3133\n"
      ]
     }
    ],
@@ -846,6 +842,7 @@
     "\n",
     "        # Creating new variables for the hidden state, otherwise\n",
     "        # we'd backprop through the entire training history\n",
+    "        h = net.init_hidden(batch_size)\n",
     "        h = tuple([each.data for each in h])\n",
     "\n",
     "        # zero accumulated gradients\n",
@@ -904,15 +901,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 0.314\n",
-      "Test accuracy: 1.000\n"
+      "Test loss: 1.313\n",
+      "Test accuracy: 0.000\n"
      ]
     }
    ],
@@ -923,6 +920,7 @@
     "num_correct = 0\n",
     "\n",
     "# init hidden state\n",
+    "batch_size=49\n",
     "h = net.init_hidden(batch_size)\n",
     "\n",
     "net.eval()\n",
@@ -931,12 +929,16 @@
     "\n",
     "    # Creating new variables for the hidden state, otherwise\n",
     "    # we'd backprop through the entire training history\n",
+    "    #h = net.init_hidden(batch_size)\n",
     "    h = tuple([each.data for each in h])\n",
+    "    inputs = inputs[1:, :]\n",
+    "    labels = labels[1:]\n",
     "\n",
     "    if(train_on_gpu):\n",
     "        inputs, labels = inputs.cuda(), labels.cuda()\n",
     "    \n",
     "    # get predicted outputs\n",
+    "    #print(h)\n",
     "    output, h = net(inputs, h)\n",
     "    \n",
     "    # calculate loss\n",
@@ -945,7 +947,7 @@
     "    \n",
     "    # convert output probabilities to predicted class (0 or 1)\n",
     "    # getting the maximum sigmoid value out of two output values\n",
-    "    _, pred = torch.max(output, 1)  \n",
+    "    _, pred = torch.max(output, 1)\n",
     "    \n",
     "    # compare predictions to true label\n",
     "    correct_tensor = pred.eq(labels.view_as(pred))\n",
@@ -976,10 +978,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_review = 'The simplest pleasures in life are the best, and this film is one of them. Combining a rather basic storyline of love and adventure this movie transcends the usual weekend fair with wit and unmitigated charm.'"
@@ -987,14 +987,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 10660, 8515, 9, 110, 26, 1, 117, 2, 11, 20, 6, 30, 4, 96, 8064, 3, 246, 1093, 754, 4, 115, 2, 1115, 11, 18, 9714, 1, 630, 2387, 1227, 17, 2173, 2, 20536, 1354]]\n"
+      "[[1, 10674, 8636, 9, 110, 26, 1, 117, 2, 11, 20, 6, 30, 4, 96, 8126, 3, 246, 1094, 753, 4, 115, 2, 1116, 11, 18, 9757, 1, 633, 2387, 1227, 17, 2176, 2, 20826, 1357]]\n"
      ]
     }
    ],
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1042,24 +1042,23 @@
       "      0     0     0     0     0     0     0     0     0     0     0     0\n",
       "      0     0     0     0     0     0     0     0     0     0     0     0\n",
       "      0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "      0     0     0     0     0     0     0     0     1 10660  8515     9\n",
-      "    110    26     1   117     2    11    20     6    30     4    96  8064\n",
-      "      3   246  1093   754     4   115     2  1115    11    18  9714     1\n",
-      "    630  2387  1227    17  2173     2 20536  1354]]\n"
+      "      0     0     0     0     0     0     0     0     1 10674  8636     9\n",
+      "    110    26     1   117     2    11    20     6    30     4    96  8126\n",
+      "      3   246  1094   753     4   115     2  1116    11    18  9757     1\n",
+      "    633  2387  1227    17  2176     2 20826  1357]]\n"
      ]
     }
    ],
    "source": [
     "# test sequence padding\n",
-    "seq_length=200\n",
-    "features = pad_features(test_ints, seq_length)\n",
+    "features = pad_features(test_ints, 200)\n",
     "\n",
     "print(features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1078,10 +1077,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def predict(net, test_review, sequence_length=200):\n",
@@ -1122,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1153,17 +1150,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive review detected!\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_review = \"bad movie awful\"\n",
+    "predict(net, test_review, seq_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1177,7 +1190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
