--- a/convolutional-neural-networks/cifar-cnn/cifar10_cnn_exercise.ipynb
+++ b/convolutional-neural-networks/cifar-cnn/cifar10_cnn_exercise.ipynb
@@ -511,9 +511,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:cvnd_1]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-cvnd_1-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
